--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Program Files\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Program Files\\Python36\\python.exe",
+    "cSpell.words": [
+        "authr"
+    ]
 }
