--- a/config/auth_config_template.yaml
+++ b/config/auth_config_template.yaml
@@ -1,5 +1,14 @@
-# A redacted copy of auth_config.yaml for vcs
-google_auth:
+# A redacted copy of auth_config.yaml for vcs. Fill in the blanks.
+auth0:
+  auth_url: ""
+  response_type: "code"
+  scope: "openid profile email offline_access"
+  token_url: ""
+  grant_type: "authorization_code"
+  client_id: ""
+  client_secret: ""
+  redirect_uri: "http://localhost:5000"
+google:
   auth_url: "https://accounts.google.com/o/oauth2/v2/auth"
   response_type: "code"
   scope: "openid email https://www.googleapis.com/auth/photoslibrary"
@@ -7,7 +16,5 @@ google_auth:
   token_url: "https://www.googleapis.com/oauth2/v4/token"
   redirect_uri: "http://localhost:5000"
   grant_type: "authorization_code"
-  client_id: "[REDACTED]"
-  client_secret: "[REDACTED]"
-accounts:
-  - "[REDACTED]"
+  client_id: ""
+  client_secret: ""
