reconsidering my life choices wip

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "sprnklr entry",
             "type": "python",
             "request": "launch",
-            "program": "main.py",
+            "program": "server.py",
             "console": "integratedTerminal"
         }
     ]
