--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "cachr",
         "id",
         "percentage",
-        "sprnklr"
+        "sprnklr",
+        "strptime"
     ],
     "sqltools.connections": [
         {
