--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 /dist
 /tmp
 /out-tsc
+/app-builds
+/release
+main.js
+src/**/*.js
+!src/karma.conf.js
+*.js.map
 # Only exists if Bazel was run
 /bazel-out
 
@@ -40,7 +46,14 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+package-lock.json
+
+# e2e
+/e2e/*.js
+!/e2e/protractor.conf.js
+/e2e/*.map
 
 # System Files
 .DS_Store
 Thumbs.db
+
