--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sprnklr",
   "version": "0.0.0",
-  "main": "main.js",
+  "main": "electron/main.js",
   "private": true,
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
@@ -19,15 +19,18 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "dependencies": {},
+  "dependencies": {
+    "electron": "^11.1.1",
+    "@nicholasazar/appauth": "1.3.1"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/animations": "~11.0.5",
-    "@angular/common": "~11.0.5",
     "@angular/cli": "~11.0.5",
+    "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
@@ -36,9 +39,9 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
     "electron-reload": "^1.5.0",
+    "electron-store": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
