--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sprnklr",
   "version": "0.0.0",
-  "main": "electron/main.js",
+  "main": "main.js",
   "private": true,
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "electron": "^11.1.1",
+    "electron-store": "^6.0.1",
     "@nicholasazar/appauth": "1.3.1"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^11.0.0",
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/animations": "~11.0.5",
     "@angular/cli": "~11.0.5",
@@ -41,7 +43,6 @@
     "codelyzer": "^6.0.0",
     "electron-builder": "^22.9.1",
     "electron-reload": "^1.5.0",
-    "electron-store": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
