--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "^11.0.0 || ^12.0.0-0",
+    "@angular/cdk": "^11.0.3",
+    "@angular/forms": "^11.0.0 || ^12.0.0-0",
+    "@angular/material": "^11.0.3",
+    "@nicholasazar/appauth": "1.3.1",
     "electron": "^11.1.1",
-    "electron-store": "^6.0.1",
-    "@nicholasazar/appauth": "1.3.1"
+    "electron-store": "^6.0.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^11.0.0",
