--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "electron-reload": "^1.5.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jwt-decode": "^3.1.2",
     "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
